fix: handle overflow (#2553)
ref: MANAGER-4712

--- a/packages/manager/modules/account-sidebar/src/index.scss
+++ b/packages/manager/modules/account-sidebar/src/index.scss
@@ -14,6 +14,7 @@
   height: 100%;
   padding: 2rem;
   padding-top: 3rem;
+  overflow: auto;
 
   h3 {
     font-size: 1rem;
